--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #222831;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,13 +13,36 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'Satoshi';
+  src: url('../assets/fonts/custom-font.woff2') format('woff2'),
+       url('../assets/fonts/custom-font.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Apply the font */
+body {
+  font-family: 'CustomFont', sans-serif;
+}
+
+
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #393e46;
+  padding-right: 15px;
+  text-align: right;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #eeeeee;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #00adb5;
 }
 
 body {
