--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,37 +1,4 @@
-/* Color Pallet
-
-#010101 Black
-#362c5f Jacarta
-#fc8a68 Salmon
-#fefdfd Soft Peach
-#a095af Amethyst Smoke
-#964b48 Copper Rust
-
-#010101 Black
-#e4e4e4 Mecury
-#5f22d9 Purple Heart
-#2c016d Christalle
-#9c9c9c DustyGray
-#d7ad0d Galliano
-#5b5b5b Scorpian
-#51d6ca Viking
-#ac73ff Hellotrope
-#c82b28 Persian Red
-
-Different page combos
-background: #5f22d9;
-font-color: #e4e4e4;
-color: #51d6ca; hover: #00d084;
-
-background: #2c016d;
-color: #e4e4e4; hover: #00d084;
-
-background: #51d6ca;
-color: #e4e4e4; hover: #00d084;
-
-*/
-
-@import url("../../src/satoshi.css");
+@import url("../../src/styles/satoshi.css");
 
 .navbar {
   height: 7rem;
